2014-04-21  Michael Ernst  <mernst@cs.washington.edu>

	* w3m-util.el (w3m-beginning-of-tag, w3m-end-of-tag): Work correctly
	for the case there is only whitespace between <tag> and </tag>.

2014-03-31  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-markup-urls-nobreak): Don't modify textarea.
	[emacs-w3m:12308]

2014-03-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-relationship-estimate-rules): Update regexps for Google.

2014-02-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-url-encode-string): Encode `:' and `/'.
	Suggested by Dan Jacobson <jidanni@jidanni.org>.

	* w3m-form.el (w3m-form-make-form-data, w3m-form-parse-and-fontify):
	Use car-less-than-car.

2014-02-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-filter.el (w3m-filter-subst-disabled-with-readonly): Relax regexp.

	* w3m-form.el (w3m-form-submit): Work for a url having no query part.

2014-01-08  Mirko M.  <mirko.m@hotmail.com>

	* w3m-util.el (w3m-delete-frames-and-windows): Don't clear the windows
	layout that used to be before visiting an emacs-w3m buffer.
	[emacs-w3m:12273]

2014-01-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-util.el (w3m-static-if, w3m-static-when, w3m-static-unless)
	(w3m-static-cond): Add edebug spec.

	* octet.el: Fix edebug spec for the static-* macros.

2013-12-03  Tatsuya Kinoshita  <tats@vega.ocn.ne.jp>

	* mew-w3m.el (mew-w3m-region): Set point to the end of <div> tag to
	prevent infinite loop.

2013-12-01  Tatsuya Kinoshita  <tats@vega.ocn.ne.jp>

	* mew-w3m.el (mew-w3m-region): Set point to minimum for
	`mew-w3m-cite-blockquote' to work.

2013-11-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mew-w3m.el (mew-w3m-cite-blockquote): New function.
	(mew-w3m-region): Use it.

2013-11-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-filter.el (w3m-filter-subst-disabled-with-readonly): Rewrite.

	* w3m-filter.el (w3m-filter-subst-disabled-with-readonly):
	Fix the width of disabled select form.

2013-11-25  Katsumi Yamaoka  <yamaoka@jpl.org>
