@@ -1,3 +1,9 @@
+2014-06-11  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* w3m.el (w3m-content-type-alist): Don't bug out for the case where
+	browse-url-browser-function is set to a function symbol that is not yet
+	defined.  [emacs-w3m:12317]
+
 2014-04-21  Michael Ernst  <mernst@cs.washington.edu>
 
 	* w3m-util.el (w3m-beginning-of-tag, w3m-end-of-tag): Work correctly
